<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FragmentDialogIntent</string>
    <string name="action_settings">Settings</string>
    <string name="do_start">start dialog</string>
    <string name="abort">Cancel</string>
    <string name="next_activity">next</string>
    <string name="dialog_text">Do you wish to proceed?</string>
    <string name="target">target</string>
    <string name="target_descr">passed values</string>
    <string name="list_item_key_text">Value:</string>
    <string name="network_id">Network ID</string>
    <string name="mac_address">Mac address</string>
    <string name="signal_strength">Signal strength</string>

</resources>
